--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
     <header class="header">
-        
+        <nav class="header__nav">
+            <div class="container">
+                <div class="header__nav-container">
+                    <a href="#" class="logo">
+                        Premium
+                        <span class="logo__span">CAR</span>
+                    </a>
+                    <ul class="header__nav-list">
+                        <li><a href="#" class="header__nav-link">Home</a></li>
+                        <li><a href="#" class="header__nav-link">Recipes</a></li>
+                        <li><a href="#" class="header__nav-link">Article</a></li>
+                        <li><a href="#" class="header__nav-link">Purchase</a></li>
+                    </ul>
+                    <a href="#" class="header__nav-search">
+                        <img src="img/Shape.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
