--- a/index.html
+++ b/index.html
@@ -29,5 +29,51 @@
             </div>
         </nav>
     </header>
+    <main class="main">
+        <div class="container">
+            <div class="main__cars">
+                <div class="main__cars-item">
+                    <img src="img/Bitmap.jpg" alt="" class="main__cars-img">
+                    <a href="#" class="main__link">Vehicle</a>
+                    <div class="main__cars-info">
+                        <p class="main__info">Rickie Baroch - June 6, 2019</p>
+                        <h2 class="main__title">One of Saturns largest rings may be newer than anyone</h2> 
+                    </div>
+                </div>
+                <div class="main__cars-item">
+                    <img src="img/Image_2.jpg" alt="" class="main__cars-img">
+                    <a href="#" class="main__link">Vehicle</a>
+                    <div class="main__cars-info">
+                        <p class="main__info">Rickie Baroch - June 6, 2019</p>
+                        <h3 class="main__title">One of Saturns largest rings may be newer than anyone</h3>  
+                    </div>
+                </div>
+                <div class="main__cars-item">
+                    <img src="img/Bitmap (2).jpg" alt="" class="main__cars-img">
+                    <a href="#" class="main__link">Vehicle</a>
+                    <div class="main__cars-info"><p class="main__info">Rickie Baroch - June 6, 2019</p>
+                    <h3 class="main__title">One of Saturns largest rings may be newer than anyone </h3>
+                </div>      
+                </div>
+                <div class="main__cars-item">
+                    <img src="img/Bitmap (2).jpg" alt="" class="main__cars-img">
+                    <a href="#" class="main__link">Vehicle</a>
+                    <div class="main__cars-info">
+                        <p class="main__info">Rickie Baroch - June 6, 2019</p>
+                        <h3 class="main__itle">One of Saturns largest rings may be newer than anyone</h3>   
+                    </div>               
+                </div>
+                <div class="main__cars-item">
+                    <img src="img/Bitmap (3).jpg" alt="" class="main__cars-img">
+                    <a href="#" class="main__link">Vehicle</a>
+                    <div class="main__cars-info">
+                        <p class="main__info">Rickie Baroch - June 6, 2019</p>
+                        <h3 class="main__itle">One of Saturns largest rings may be newer than anyone</h3>   
+                    </div>               
+                </div>
+            </div>
+        </div>
+      
+    </main>
 </body>
 </html>
